# Trial-SLAM

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  trialSlamCLI.cpp
config/: default.yaml
include/trialSlam/: backend.h  camera.h  common.h  config.h  constants.h  dashboard.h  feature.h  frame.h  frontend.h  g2olib.h  landmark.h  map.h  typedefs.h  visual_odometry.h  vo.h
src/: CMakeLists.txt  backend.cpp  camera.cpp  config.cpp  dashboard.cpp  feature.cpp  frame.cpp  frontend.cpp  g2olib.cpp  landmark.cpp  map.cpp  visual_odometry.cpp  vo.cpp
test/: CMakeLists.txt  test_camera.cpp
